# Cosmere_Characters_Dictionary

./: Readme.md  cosmere_dictionary.py  pyproject.toml  requirements.txt
Eelakin_dictionary/: content.xhtml
Komashi_dictionary/: content.xhtml
Lumar_dictionary/: content.xhtml
MOBI/: Eelakin_dictionary.mobi  Komashi_dictionary.mobi  Lumar_dictionary.mobi  Nalthis_dictionary.mobi  Roshar_dictionary.mobi  Scadrial_dictionary.mobi  Sel_dictionary.mobi  Taldain_dictionary.mobi  Treno_dictionary.mobi  Yolen_dictionary.mobi
Nalthis_dictionary/: Nalthis_dictionary.opf  content.xhtml
Roshar_dictionary/: Roshar_dictionary.opf  content.xhtml
Sel_dictionary/: content.xhtml
Taldain_dictionary/: content.xhtml
Treno_dictionary/: Treno_dictionary.opf
Yolen_dictionary/: Yolen_dictionary.opf  content.xhtml
dictionaries/Eelakin_dictionary/: Eelakin_dictionary.opf
dictionaries/Komashi_dictionary/: Komashi_dictionary.opf
dictionaries/Lumar_dictionary/: Lumar_dictionary.opf
dictionaries/Scadrial_dictionary/: Scadrial_dictionary.opf  content.xhtml
dictionaries/Sel_dictionary/: Sel_dictionary.opf
dictionaries/Taldain_dictionary/: Taldain_dictionary.opf
dictionaries/Treno_dictionary/: content.xhtml  style.css
